# agent-platform

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  GEMINI.md  PLAN.md  README.md  claude_log.md
.claude/: settings.json
.claude/agents/: backend.md  cicd.md  orchestrator.md  planner.md  qa.md  reviewer.md  security.md
.claude/commands/: gate-check.md  handoff.md  init-project.md  new-feature.md  retrospective.md
.gemini/: settings.json
mcp-server/: pyproject.toml
mcp-server/src/agent_platform_mcp/: __init__.py  config.py  frontmatter.py  server.py
mcp-server/src/agent_platform_mcp/tools/: __init__.py  audit.py  feature.py  handoff.py  log.py  project.py  qa.py  release.py  review.py  standards.py
standards/: api-contract.md  coding-style.md  commit-convention.md  security-baseline.md  test-policy.md
templates/: API-SPEC.md  BUG-REPORT.md  DECISIONS.md  PR-TEMPLATE.md  PRD.md  RELEASE-NOTE.md  REVIEW.md  SECURITY-AUDIT.md  TASK.md  TEST-PLAN.md
workflows/: feature-flow.md  hotfix-flow.md
