[project]
name = "agent-platform-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "seongkyunmun", email = "sk.mun@kt.com" }
]
requires-python = ">=3.11.12"
dependencies = [
    "mcp[cli]>=1.27.0",
]

[project.scripts]
agent-platform-mcp = "agent_platform_mcp:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
